Add production config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -41,10 +41,10 @@ binangkit {
       }
 
       production {
-        url = "http://103.16.138.19:8008/transactions/trx.json"
-        username = "tns14110001"
-        password = "1234"
-        secretKey = "k6a4qeer1piwqfc"
+        url = "https://202.152.60.62:1112/transactions/trx.json"
+        username = "HTH15100016"
+        password = "3jZ&9#%o"
+        secretKey = "sa3nl7exij32dor"
       }
     }
   }
