Make port configurable and change DB production name

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,12 @@
 binangkit {
   environment = "local"
 
+  port {
+    local = 8181
+    development = 8181
+    production = 8282
+  }
+
   db {
     local {
       driver = "com.mysql.jdbc.Driver"
@@ -18,7 +24,7 @@ binangkit {
 
     production {
       driver = "com.mysql.jdbc.Driver"
-      url = "jdbc:mysql://localhost/SMM_MAIN_DB"
+      url = "jdbc:mysql://localhost/SMM_MAIN_DB_PROD"
       user = "root"
       password = "Sury4n1MM!!!"
     }
