Change production password

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -49,7 +49,7 @@ binangkit {
       production {
         url = "https://202.152.60.62:1112/transactions/trx.json"
         username = "HTH15100016"
-        password = "3jZ&9#%o"
+        password = "2NbEvAxj"
         secretKey = "sa3nl7exij32dor"
       }
     }
