Make product id configurable

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -37,6 +37,11 @@ binangkit {
         username = "tns14110001"
         password = "1234"
         secretKey = "k6a4qeer1piwqfc"
+        product {
+          prepaid = 80
+          postpaid = 100
+          nontaglis = 105
+        }
       }
 
       development {
@@ -44,13 +49,23 @@ binangkit {
         username = "tns14110001"
         password = "1234"
         secretKey = "k6a4qeer1piwqfc"
+        product {
+          prepaid = 80
+          postpaid = 100
+          nontaglis = 105
+        }
       }
 
       production {
         url = "https://202.152.60.62:1112/transactions/trx.json"
         username = "HTH15100016"
         password = "2NbEvAxj"
-        secretKey = "sa3nl7exij32dor"
+        secretKey = "sa3nl7exij32dor"        
+        product {
+          prepaid = 385
+          postpaid = 386
+          nontaglis = 387
+        }
       }
     }
   }
